20190508
--------
- #42877 - Support compressed delimited files

20190429
--------
- #42932 - Duplicated records when reading Parquet files

20190416
--------
- #42277 - Issue detecting binary fields in avro files
- #42266 - Support Azure Data Lake Storage Gen2 (abfs)

20190212
--------
- #41819 - Issue converting INT96 and FIXED_LEN_BYTE_ARRAY Parquet types to VDP types
- #41615 - Added profile errorprone to execute error prone

20190109
-------
- #41229 - Error joining files residing in the same hadoop filesystem

20181121
-------
- #40114 - Update manual mentioning the need to increase the JVM's heap space for Admin Tool
- #40062 - Include a class similar to the file system wrapper to list files in a bucket
- #40061 - Include support for Google Storage
- #40578 - Configure null-values in DFS Delimited Text File Wrapper
- #40601 - Make CSV parser more lenient allowing the wrapper to recover from parsing errors
- #40673 - Error executing a wrapper without Kerberos after a kerberized one
- #40675 - Skip BOM in delimited files

20181024
--------
- #40060 - File name pattern explanation is misleading
- #40232 - ClassNotFoundException accesing Amazon S3 using IAM Assumed Roles

20181008
-------
- #39744 - Rebranding of the HDFS wrapper
- #39931 - Failed connections could require restarting VDP to refresh wrapper configuration files

20181003
--------
- Created first version of this component for Denodo 7.0