@@ -22,6 +22,7 @@
 package com.denodo.connect.hadoop.hdfs.wrapper;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.util.List;
 import java.util.Map;
 import java.util.NoSuchElementException;
@@ -49,6 +50,8 @@ import com.denodo.vdb.engine.customwrapper.condition.CustomWrapperConditionHolde
 import com.denodo.vdb.engine.customwrapper.expression.CustomWrapperFieldExpression;
 import com.denodo.vdb.engine.customwrapper.input.type.CustomWrapperInputParameterTypeFactory;
 import com.denodo.vdb.engine.customwrapper.input.type.CustomWrapperInputParameterTypeFactory.RouteType;
+import com.denodo.vdb.engine.customwrapper.input.value.CustomWrapperInputParameterRouteValue;
+import com.denodo.vdb.engine.customwrapper.input.value.CustomWrapperInputParameterValue;
 
 import static org.apache.parquet.filter2.predicate.FilterApi.*;
 
@@ -79,10 +82,10 @@ public class HDFSParquetFileWrapper extends AbstractSecureHadoopWrapper {
                     CustomWrapperInputParameterTypeFactory.stringType()),               
             new CustomWrapperInputParameter(Parameter.CORE_SITE_PATH,
                 "Local route of core-site.xml configuration file ",
-                false,  CustomWrapperInputParameterTypeFactory.routeType(new RouteType [] {RouteType.LOCAL})),
+                false,  CustomWrapperInputParameterTypeFactory.routeType(new RouteType [] {RouteType.LOCAL, RouteType.HTTP, RouteType.FTP})),
             new CustomWrapperInputParameter(Parameter.HDFS_SITE_PATH,
                 "Local route of hdfs-site.xml configuration file ",
-                false,  CustomWrapperInputParameterTypeFactory.routeType(new RouteType [] {RouteType.LOCAL}))       
+                false,  CustomWrapperInputParameterTypeFactory.routeType(new RouteType [] {RouteType.LOCAL, RouteType.HTTP, RouteType.FTP}))
     };
 
     @Override
@@ -105,10 +108,7 @@ public class HDFSParquetFileWrapper extends AbstractSecureHadoopWrapper {
         HDFSParquetFileReader reader = null;
         try {
 
-            final String fileSystemURI = inputValues.get(Parameter.FILESYSTEM_URI);
-            final String coreSitePath = inputValues.get(Parameter.CORE_SITE_PATH);
-            final String hdfsSitePath = inputValues.get(Parameter.HDFS_SITE_PATH);
-            final Configuration conf = HadoopConfigurationUtils.getConfiguration(fileSystemURI, coreSitePath, hdfsSitePath);
+            final Configuration conf = getHadoopConfiguration(inputValues);
 
             final String parquetFilePath = inputValues.get(Parameter.PARQUET_FILE_PATH);
             final Path path = new Path(parquetFilePath);
@@ -147,10 +147,7 @@ public class HDFSParquetFileWrapper extends AbstractSecureHadoopWrapper {
     public void doRun(final CustomWrapperConditionHolder condition, final List<CustomWrapperFieldExpression> projectedFields,
             final CustomWrapperResult result, final Map<String, String> inputValues) throws CustomWrapperException {
 
-        final String fileSystemURI = inputValues.get(Parameter.FILESYSTEM_URI);      
-        final String coreSitePath = inputValues.get(Parameter.CORE_SITE_PATH);
-        final String hdfsSitePath = inputValues.get(Parameter.HDFS_SITE_PATH);
-        final Configuration conf = HadoopConfigurationUtils.getConfiguration(fileSystemURI, coreSitePath, hdfsSitePath);
+        final Configuration conf = getHadoopConfiguration(inputValues);
 
         final String parquetFilePath = inputValues.get(Parameter.PARQUET_FILE_PATH);
         final Path path = new Path(parquetFilePath);
@@ -189,7 +186,5 @@ public class HDFSParquetFileWrapper extends AbstractSecureHadoopWrapper {
 
         }
     }
-
-
 
 }
